# scriptorium

./: .editorconfig  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  POETRY.md  README.md  _scriptorium  docker-compose.yml  file_v1.1.sh  pre-commit  prompting.py  pyproject.toml  requirements.txt  scriptorium  scriptorium.py  test-plan.md
config/: com.github.autopkg.stage..plist.example
