[tool.poetry]
name = "scriptorium"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
inquirer = "^2.9.1"
requests = "^2.27.1"
requests-cache = "^0.9.1"
python-decouple = "^3.6"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
